chore: lessons management
