# modules/instructors/managers.go
@@ -8,6 +8,7 @@ import (
 	"github.com/kayprogrammer/ednet-fiber-api/ent"
 	"github.com/kayprogrammer/ednet-fiber-api/ent/course"
 	"github.com/kayprogrammer/ednet-fiber-api/ent/enrollment"
+	"github.com/kayprogrammer/ednet-fiber-api/ent/lesson"
 )
 
 type InstructorManager struct{}
@@ -95,4 +96,74 @@ func (i InstructorManager) GetCoursesPaginated(db *ent.Client, fibCtx *fiber.Ctx
 	query = courseManager.ApplyCourseFilters(fibCtx, query)
 	courses := config.PaginateModel(fibCtx, query)
 	return courses
+}
+
+func (i InstructorManager) GetCourseLessonBySlug(db *ent.Client, ctx context.Context, instructor *ent.User, slug string, loaded bool) *ent.Lesson {
+	query := db.Lesson.Query().
+		Where(
+			lesson.SlugEQ(slug),
+			lesson.HasCourseWith(course.InstructorIDEQ(instructor.ID)),
+		)
+	if loaded {
+		query = query.
+			WithCourse()
+	}
+	lessonObj, _ := query.Only(ctx)
+	return lessonObj
+}
+
+func (i InstructorManager) GenerateLessonSlug(db *ent.Client, ctx context.Context, title string) string {
+	baseSlug := config.Slugify(title)
+	uniqueSlug := baseSlug
+	for {
+		exists, _ := db.Lesson.Query().Where(lesson.SlugEQ(uniqueSlug)).Exist(ctx)
+		if !exists {
+			break
+		}
+		uniqueSlug = baseSlug + "-" + config.GetRandomString(7)
+	}
+	return uniqueSlug
+}
+
+func (i InstructorManager) CreateLesson(db *ent.Client, ctx context.Context, course *ent.Course, thumbnailUrl string, videoUrl *string, data LessonCreateSchema) *ent.Lesson {
+	slug := i.GenerateLessonSlug(db, ctx, data.Title)
+	lessonObj := db.Lesson.Create().SetTitle(data.Title).SetSlug(slug).SetDesc(data.Desc).
+		SetCourse(course).SetNillableContent(data.Content).SetOrder(data.Order).
+		SetIsPublished(data.IsPublished).SetDuration(data.Duration).SetIsFreePreview(data.IsFreePreview).
+		SetThumbnailURL(thumbnailUrl).SetNillableVideoURL(videoUrl).
+		SaveX(ctx)
+	return lessonObj
+}
+
+func (i InstructorManager) UpdateLesson(db *ent.Client, ctx context.Context, lesson *ent.Lesson, thumbnailUrl *string, videoUrl *string, data LessonCreateSchema) *ent.Lesson {
+	slug := lesson.Slug
+	if data.Title != lesson.Title {
+		slug = i.GenerateLessonSlug(db, ctx, data.Title)
+	}
+
+	updateLessonQuery := lesson.Update().SetTitle(data.Title).SetSlug(slug).SetDesc(data.Desc).
+		SetOrder(data.Order).SetIsPublished(data.IsPublished).SetDuration(data.Duration).SetIsFreePreview(data.IsFreePreview)
+
+	if thumbnailUrl != nil {
+		updateLessonQuery = updateLessonQuery.SetNillableThumbnailURL(thumbnailUrl)
+	}
+	if videoUrl != nil {
+		updateLessonQuery = updateLessonQuery.SetNillableVideoURL(videoUrl)
+	}
+	if data.Content != nil {
+		updateLessonQuery = updateLessonQuery.SetNillableContent(data.Content)
+	}
+	lessonObj := updateLessonQuery.SaveX(ctx)
+	return lessonObj
+}
+
+func (i InstructorManager) DeleteLesson(db *ent.Client, ctx context.Context, lessonObj *ent.Lesson) *string {
+	// Prevent deletion if there's a paid enrollment for a published lesson
+	enrollmentExists := db.Enrollment.Query().Where(enrollment.CourseIDEQ(lessonObj.CourseID), enrollment.PaymentStatusEQ(enrollment.PaymentStatusSuccessful)).ExistX(ctx)
+	if enrollmentExists && lessonObj.IsPublished {
+		errMsg := "Cannot delete a published lesson which has at least one paid enrollment"
+		return &errMsg
+	}
+	db.Lesson.DeleteOne(lessonObj).ExecX(ctx)
+	return nil
 }
